# uncertainty-paper-code

./: .gitignore  README.md  pyproject.toml
data_dir/checkpoints/gemini25pro/: checkpoint.json  gemini25pro_scores.csv  gemini25pro_scores.json  gemini25pro_scores_exclude_small_samples.csv  gemini25pro_scores_exclude_small_samples.json
data_dir/checkpoints/gemini30preview/: checkpoint.json  gemini30preview_scores.csv  gemini30preview_scores.json  gemini30preview_scores_exclude_small_samples.csv  gemini30preview_scores_exclude_small_samples.json
data_dir/checkpoints/gpt-5.1/: checkpoint.json  gpt-5.1_scores.csv  gpt-5.1_scores.json  gpt-5.1_scores_exclude_small_samples.csv  gpt-5.1_scores_exclude_small_samples.json
datasets/mnli/: multinli_1.0_dev_matched.jsonl.small.jsonl  multinli_1.0_dev_mismatched.jsonl.small.jsonl
notebooks/: mnli_analysis.ipynb
src/medical_uncertainty/: combined_delta_analysis.py  data_classes.py  gemini_inference.py  lite_llm_caller.py  multi_dimensional_analysis.py  openai_inference.py  pentagon_gemini25_focus.py  pentagon_gemini30_focus.py  pentagon_gpt_focus.py  pentagon_radial_levels.py  prob_calculator.py  single_model_delta.py  workflow.py
tests/: test_gemini_inference.py
