[project]
name = "medical-uncertainty-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.3.0",
    "ecg-plot>=0.2.8",
    "fire>=0.7.1",
    "litellm>=1.77.7",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "pydantic>=2.11.10",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "starbars>=3.1.1",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
